--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "SimpleUpdates/phpwhois",
+	"name": "simple-updates/phpwhois",
 	"type": "library",
 	"description": "This package contains a Whois (RFC954) library for PHP. It allows a PHP program to create a Whois object, and obtain the output of a whois query with the Lookup function.",
 	"license": "GPLv2",
